[gd_scene load_steps=14 format=2]

[ext_resource path="res://characters/Zach/Zach.gd" type="Script" id=1]
[ext_resource path="res://characters/Zach/Control_1.gd" type="Script" id=2]
[ext_resource path="res://characters/Zach/zackh_002.png" type="Texture" id=3]
[ext_resource path="res://Components/Hallway/Hallway_2.png" type="Texture" id=4]
[ext_resource path="res://Image file/textdesign-04.png" type="Texture" id=5]
[ext_resource path="res://Image file/textdesign-05.png" type="Texture" id=6]
[ext_resource path="res://characters/Zach/Timer.gd" type="Script" id=7]
[ext_resource path="res://assets/fonts/battlenet/new_dynamicfont.tres" type="DynamicFont" id=8]
[ext_resource path="res://characters/Zach/Zach3Dmodel.glb" type="PackedScene" id=9]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1, 2.66197, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0, 0, 0 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 2070, 1430 )

[sub_resource type="ConvexPolygonShape" id=5]
points = PoolVector3Array( -1, -1, -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, -1, 1, 1, 1, -1, -1, -1, -1, 1, -1, 1, -1 )

[node name="Zach" type="Area"]
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="Area" type="Area" parent="."]
transform = Transform( 0.500088, 0, 0, 0, 1.66417, 0, 0, 0, 1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 20.8098, 0, 0, 0, 3, 0, 0, 0, 9.56232, 0, 0, 0 )
shape = SubResource( 2 )
__meta__ = {
"_editor_description_": "														"
}

[node name="Zach" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( -822, 1045 )
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="Zach"]
margin_left = 60.0
margin_top = 440.0
margin_right = 100.0
margin_bottom = 480.0
rect_pivot_offset = Vector2( 192, -343 )
custom_styles/panel = SubResource( 3 )

[node name="BackBoard" type="Panel" parent="Zach/Panel"]
margin_left = -60.0
margin_top = -440.0
margin_right = 964.0
margin_bottom = 160.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_editor_description_": ""
}

[node name="NinePatchRect" type="NinePatchRect" parent="Zach/Panel"]
margin_left = 570.0
margin_top = -344.0
margin_right = 910.0
margin_bottom = -1.00003
rect_scale = Vector2( 1.16993, 2.2377 )
texture = ExtResource( 3 )
__meta__ = {
"_editor_description_": ""
}

[node name="Backtext" type="NinePatchRect" parent="Zach/Panel"]
margin_right = 904.0
margin_bottom = 120.0
texture = ExtResource( 6 )
region_rect = Rect2( 37.764, 71.282, 941.108, 205.582 )

[node name="NinePatchRect2" type="NinePatchRect" parent="Zach/Panel"]
margin_top = -70.0
margin_right = 410.0
margin_bottom = -20.0
texture = ExtResource( 5 )
region_rect = Rect2( 67.45, 15.688, 293, 55 )

[node name="Label" type="Label" parent="Zach/Panel/NinePatchRect2"]
margin_left = 190.0
margin_top = 11.0
margin_right = 234.0
margin_bottom = 41.0
custom_colors/font_color = Color( 0.721569, 0.886275, 0.823529, 1 )
custom_fonts/font = ExtResource( 8 )
autowrap = true
clip_text = true

[node name="Label" type="Label" parent="Zach/Panel"]
margin_left = 129.0
margin_top = 19.0
margin_right = 747.0
margin_bottom = 100.0
custom_colors/font_color = Color( 0.701961, 0.878431, 0.811765, 1 )
custom_fonts/font = ExtResource( 8 )
autowrap = true
clip_text = true

[node name="Button" type="NinePatchRect" parent="Zach/Panel"]
margin_left = 858.0
margin_top = -425.0
margin_right = 958.0
margin_bottom = -375.0
texture = ExtResource( 5 )
region_rect = Rect2( 67.1929, 18.5056, 295.511, 48.545 )
patch_margin_left = 1
patch_margin_right = 2

[node name="Label" type="Label" parent="Zach/Panel/Button"]
margin_left = 20.0
margin_top = 9.0
margin_right = 95.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0.721569, 0.886275, 0.823529, 1 )
custom_fonts/font = ExtResource( 8 )
text = "Skip >"
autowrap = true
clip_text = true
__meta__ = {
"_editor_description_": ""
}

[node name="Button" type="Button" parent="Zach/Panel/Button"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 100.0
margin_bottom = 50.0

[node name="Button2" type="NinePatchRect" parent="Zach/Panel"]
margin_left = 859.0
margin_top = -368.0
margin_right = 959.0
margin_bottom = -318.0
texture = ExtResource( 5 )
region_rect = Rect2( 67.1929, 18.5056, 295.511, 48.545 )
patch_margin_left = 1
patch_margin_right = 2
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Zach/Panel/Button2"]
margin_left = 6.0
margin_top = 7.0
margin_right = 96.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0.721569, 0.886275, 0.823529, 1 )
custom_fonts/font = ExtResource( 8 )
text = "Skip+1>"
autowrap = true
clip_text = true
__meta__ = {
"_editor_description_": ""
}

[node name="Button2" type="Button" parent="Zach/Panel/Button2"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 100.0
margin_bottom = 50.0
__meta__ = {
"_editor_description_": ""
}

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 2.7
script = ExtResource( 7 )

[node name="Zach2" type="StaticBody" parent="."]
transform = Transform( 3.70072, 0, 0, 0, 3.02436, 0, 0, 0, 3.70072, 0, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2" type="CollisionShape" parent="Zach2"]
transform = Transform( 1.05, 0, 0, 0, 3.78, 0, 0, 0, 0.85, 0, 0, 0 )
shape = SubResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="Zach2"]
transform = Transform( 1.05, 0, 0, 0, 3.78, 0, 0, 0, 0.85, 0, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="Zach3Dmodel" parent="." instance=ExtResource( 9 )]

[connection signal="area_entered" from="." to="." method="_on_Zach_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Zach_body_entered"]
[connection signal="tree_entered" from="." to="." method="_on_Zach_tree_entered"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="Area" to="Zach" method="_on_Area_body_entered"]
[connection signal="body_entered" from="Area" to="Timer" method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="Zach" method="_on_Area_body_exited"]
[connection signal="body_exited" from="Area" to="Timer" method="_on_Area_body_exited"]
[connection signal="script_changed" from="Zach" to="." method="_on_Zach_script_changed"]
[connection signal="pressed" from="Zach/Panel/Button/Button" to="Zach" method="_on_Button_pressed"]
[connection signal="pressed" from="Zach/Panel/Button/Button" to="Timer" method="_on_Button_pressed"]
[connection signal="pressed" from="Zach/Panel/Button2/Button2" to="Zach" method="_on_Button2_pressed"]
[connection signal="pressed" from="Zach/Panel/Button2/Button2" to="Timer" method="_on_Button2_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="Zach" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="Timer" method="_on_Timer_timeout"]
